config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - api.jonagainsthumanity.com
    secretName: letsencrypt
  rules:
  - host: api.jonagainsthumanity.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cardsah
            port:
              number: 80
